--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	<packaging>bundle</packaging>
 
 	<properties>
+		<module.name>com.semanticcms.theme.documentation</module.name>
 		<javadoc.breadcrumbs><![CDATA[<a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a>
 / <a target="${javadoc.target}" href="${project.url}">Theme Documentation</a>]]></javadoc.breadcrumbs>
 		<description.html><![CDATA[<a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> theme tailored for technical documentation.]]></description.html>
@@ -91,7 +92,6 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				<configuration>
 					<usedDependencies>
 						<!-- JSP Only -->
-						<dependency>com.aoapps:ao-encoding-taglib</dependency>
 						<dependency>com.aoapps:ao-taglib</dependency>
 						<dependency>com.aoapps:ao-web-resources-taglib</dependency>
 						<dependency>com.semanticcms:semanticcms-core-taglib</dependency>
@@ -106,6 +106,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 						<dependency>com.semanticcms:semanticcms-pagegraph</dependency>
 						<dependency>org.apache.taglibs:taglibs-standard-impl</dependency>
 					</usedDependencies>
+					<ignoredDependencies>
+						<!-- No "module-info.java" in some release builds -->
+						<dependency>com.aoapps:ao-collections</dependency>
+						<dependency>com.aoapps:ao-encoding-taglib</dependency>
+					</ignoredDependencies>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -271,6 +276,26 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 									<location>${project.build.directory}/offlineLinks/com/aoapps/javadoc/offline/javaee/${javaee.version}</location>
 								</offlineLink>
 							</offlineLinks>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.felix</groupId><artifactId>maven-bundle-plugin</artifactId>
+						<configuration>
+							<instructions>
+								<!--
+									Releases use "Automatic-Module-Name" instead of "module-info.java"
+									since has direct dependencies that are not yet modularized.
+								-->
+								<Automatic-Module-Name>${module.name}</Automatic-Module-Name>
+								<Private-Package>!.</Private-Package>
+							</instructions>
 						</configuration>
 					</plugin>
 				</plugins>
